# Jetxl

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  jetxl.pyi  pyproject.toml  requirements.txt
.github/workflows/: build_wheels.yml  rust.yml
src/: lib.rs  styles.rs  types.rs  validation.rs  writer.rs  xml.rs
